<resources>
    <string name="app_name">ProjetoCM</string>
    <string name="title_activity_homepage">QuizAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_chat">Global Chat</string>
    <string name="menu_recent">Recent Activity</string>
    <string name="menu_social">Social</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_history">History</string>
    <string name="menu_history_details">History Details</string>

    <string name="leaderboard">leaderboard</string>
    <string name="chat">chat</string>


    <!-- Profile -->
    <string name="menu_profile">Profile</string>
    <string name="score_profile">Total Score</string>
    <string name="percentage_profile">0% Correct Answers</string>
    <string name="top_profile">Top 5 Best Scores</string>
    <string name="action_history">History</string>
    <string name="action_edit">Edit Profile</string>

    <!-- Edit Profile -->
    <string name="edit_fragment">Edit Profile</string>
    <string name="action_save">Save</string>
    <string name="action_back">Back</string>
    <string name="click_edit">Click to Edit</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">696356318016949</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb696356318016949</string>
    <string name="facebook_app_id">696356318016949</string>
    <string name="fb_login_protocol_scheme">fb696356318016949</string>
    <string name="menu_logout">Log out</string>
    <string name="fab_content_description">New Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="your_choice">Your choice</string>
    <string name="correct_answers">Correct answers</string>
    <string name="next_question">Next Question</string>
    <string name="create_a_new_quiz">Create a new Quiz</string>
    <string name="insert_quiz_name">Insert Quiz name</string>
    <string name="insert_number_of_questions">Number of questions</string>
    <string name="save">Save</string>
    <string name="text_view_chat_hint">Write a message</string>
    <string name="loading_quiz_name">Loading Quiz Name</string>
    <string name="loading_category">Loading Category</string>
    <string name="loading_number_of_questions">0</string>
    <string name="loading_difficulty">Loading Difficulty</string>
    <string name="number_of_questions_label">Number of Questions</string>
    <string name="category_label">Category</string>
    <string name="quiz_difficulty_label">Difficulty</string>
    <string name="start_quiz">Start quiz</string>
    <string name="total_time_spent">Total Time Spent</string>
    <string name="final_score">Final Score</string>
    <string name="loading_quiz_category">Loading Quiz Category</string>
    <string name="number_of_correct_answers">Number of Correct Answers</string>

</resources>