<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_social" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_baseline_leaderboard_24"
            android:title="@string/menu_leaderboard" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />
    </group>
</menu>