<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fab_custom_border"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_quiz"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="0dp"
        android:padding="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageQuiz2"
            android:layout_width="240dp"
            android:layout_height="240dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:background="#80000000"
            android:gravity="center"
            android:text="@string/click_edit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/new_quiz_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_quiz_name"
        android:maxLength="50"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageQuiz" />

    <EditText
        android:id="@+id/new_quiz_num_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_number_of_questions"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_quiz_name" />

    <Spinner
        android:id="@+id/spn_category"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_custom_border"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_quiz_num_questions" />

    <Spinner
        android:id="@+id/spn_difficulty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_custom_border"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_category" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_difficulty" />
</androidx.constraintlayout.widget.ConstraintLayout>